--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/node": "^9.2.1",
+    "@clerk/astro": "^2.7.4",
     "@tailwindcss/vite": "^4.1.7",
     "astro": "^5.7.13",
     "tailwindcss": "^4.1.7"
