--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@clerk/astro": "^2.7.4",
     "@clerk/localizations": "^3.16.0",
     "@clerk/themes": "^2.2.45",
+    "@libsql/client": "^0.15.6",
     "@tailwindcss/vite": "^4.1.7",
     "astro": "^5.7.13",
     "tailwindcss": "^4.1.7"
