--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@astrojs/node": "^9.2.1",
+    "@astrojs/vercel": "^8.1.4",
     "@clerk/astro": "^2.7.4",
     "@clerk/localizations": "^3.16.0",
     "@clerk/themes": "^2.2.45",
