--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
     "@types/react": "^19.1.5",
     "@types/react-dom": "^19.1.5",
     "astro": "^5.7.13",
+    "qrcode": "^1.5.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwindcss": "^4.1.7"
+  },
+  "devDependencies": {
+    "@types/qrcode": "^1.5.5"
   }
 }
