--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tailwindcss/vite": "^4.1.7",
     "@types/react": "^19.1.5",
     "@types/react-dom": "^19.1.5",
+    "@vercel/analytics": "^1.5.0",
     "astro": "^5.7.13",
     "qrcode": "^1.5.4",
     "react": "^19.1.0",
